<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CLIP</string>
    <string name="hello_world">Hello world!</string>

    <!-- App login Area Titles -->
    <string name="login_title">CLIP</string>
    <string name="title_activity_new_user">Register</string>
    <string name="title_activity_password_recovery">Password Recovery</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="security_questions">
        <item>Pick A Question.</item>
        <item>First Pet?</item>
        <item>First Car?</item>
        <item>Favorite Teacher?</item>
        <item>Mothers Maiden Name?</item>
    </string-array>

    <!-- Home Screen Titles -->
    <string name="title_activity_home_screen">Welcome</string>
    <string name="title_section1">Calendar</string>
    <string name="title_section2">Task View</string>
    <string name="title_activity_day_view">View Day</string>

    <string-array name="CLIP_modules">
        <item>Career</item>
        <item>Health</item>
        <item>Education</item>
        <item>Finance</item>
    </string-array>

    <!-- Settings -->
    <string name="action_settings">Settings</string>

    <!-- Main Section Titles -->
    <string name="title_activity_career_home">Career</string>
    <string name="title_activity_health_home">Health</string>
    <string name="title_activity_education_home">Education</string>
    <string name="title_activity_finance_home">Finance</string>

    <!-- Career Activity Titles -->
    <!-- contacts -->
    <string name="title_activity_contact_list">Contacts</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="title_activity_new_contact">New Contact</string>

    <!-- job searches -->
    <string name="title_activity_job_list">Job Searches</string>
    <string name="title_activity_view_job_search">View Job Search</string>
    <string name="title_activity_new_job_search">New Job Search</string>

    <!-- online identities -->
    <string name="title_activity_online_ident_list">Online Identities</string>
    <string name="title_activity_view_identity">View Identity</string>
    <string name="title_activity_new_identity">New Identity</string>

    <!-- future goals -->
    <string name="title_activity_future_goals">Career Goals</string>
    <string name="title_activity_view_future_goal">View Career Goal</string>
    <string name="title_activity_new_future_goal">New Career Goal</string>

    <!-- Education section -->
    <string name="title_activity_edu_main">Education</string>

    <!-- Health Section -->
    <string name="title_activity_health_home_page">Health Home Page</string>
    <string name="title_activity_weight_loss_health_plan">Weight Loss and Diet Plan</string>
    <string name="title_activity_medicalReport">Medical Report</string>
    <string name="title_activity_doctors_visits">Doctor Visits</string>
    <string name="title_activity_weight_loss_and_diet_plan">Weight Loss And Diet Plan</string>
    <string name="title_activity_medical_report">Medical Report</string>
    <string name="title_activity_appointments_list">"Appointments List "</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_medications_list">Medications List</string>
    <string name="title_activity_medication">Medication</string>
    <string name="title_activity_exercise_plans_list">Exercise Plans List</string>
    <string name="title_activity_exercise_plan">Exercise Plan</string>
    <string name="title_activity_health_recipes">Health Recipes</string>
    <string name="title_activity_healthy_recipes_list">Healthy Recipes List</string>
    <string name="title_activity_degrees_list">My Degrees</string>
    <string name="title_activity_finance_cash_view">Cash Information</string>
    <string name="title_activity_new_degree_activity">new_degree_activity</string>
    <string name="title_activity_edu_apps_list">edu_apps_list</string>
    <string name="title_activity_finance_goals">Finance Goals</string>
    <string name="title_activity_finances_cash_new">Add Cash</string>
    <string name="title_activity_finance_assets_view">Assets</string>
    <string name="title_activity_finance_asset_new">New Asset</string>
    <string name="title_activity_finance_liability_view">Liabilities</string>
    <string name="title_activity_finance_liability_new">New Liability</string>
    <string name="title_activity_finance_credit_balance_view">Credit Balance</string>
    <string name="title_activity_finance_credit_new">New Credit</string>
    <string name="title_activity_finance_state_view">Financial State</string>
    <string name="title_activity_finance_other_view">Other Financial Information</string>
    <string name="title_activity_finance_stock_security_view">Stocks and Securities</string>
    <string name="title_activity_finance_stock_security_new">New Stock/Security</string>
    <string name="title_activity_finance_goal_view">Financial Goals</string>

    <string-array name="asset_type">
        <item>Select Asset Type</item>
        <item>Car</item>
        <item>Boat</item>
        <item>House</item>
        <item>Land</item>
    </string-array>
    <string-array name="card_provider">
        <item>Select Card Name</item>
        <item>Visa</item>
        <item>Master Card</item>
        <item>Discover</item>
        <item>American Express</item>
        <item>Other</item>
    </string-array>
    <string-array name="lending_term">
        <item>12 Months</item>
        <item>24 Months</item>
        <item>36 Months</item>
        <item>48 Months</item>
        <item>60 Months</item>
    </string-array>

    <string name="title_activity_finance_summary_view">Finance Summary</string>
    <string name="title_activity_finance_goal_new">New Goal</string>
    <string name="title_activity_finance_other_new">New Other Finance</string>
    <string name="title_activity_calculate_payable">Payable Calculator</string>
    <string name="title_activity_view_appl">View Application</string>
    <string name="title_activity_view_edu_finance">Education Finance Details</string>

</resources>
