<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="team9.clip_loginhomecareer.HomeScreen">
    <item android:id="@+id/action_Career"
          android:title="@string/title_activity_career_home"
          android:icon="@drawable/action_bar_career"
          app:showAsAction="always"/>
    <item android:id="@+id/action_Health"
          android:title="@string/title_activity_health_home"
          android:icon="@drawable/action_bar_health"
          app:showAsAction="always"/>
    <item android:id="@+id/action_Education"
          android:title="@string/title_activity_education_home"
          android:icon="@drawable/action_bar_education"
          app:showAsAction="always"/>
    <item android:id="@+id/action_Finance"
          android:title="@string/title_activity_finance_home"
          android:icon="@drawable/action_bar_finance"
          app:showAsAction="always"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
