<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/health"
    android:background="#FFFFFFFF">


    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Health Information"
        android:id="@+id/textView"
        android:layout_weight="0.04"
        android:textSize="35dp"
        android:shadowColor="#ff000000"
        android:textColor="#ff020202"
        android:paddingLeft="20dp"
        android:gravity="bottom" /-->

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_doctors_visits"
        android:layout_row="20"
        android:layout_column="0"
        android:layout_toRightOf="@+id/WeightLossAndHealthPlan"
        android:onClick="sendMessage"
        android:gravity="fill_vertical"
        android:focusableInTouchMode="false"
        android:paddingLeft="30dp"
        android:layout_weight="0.10"
        android:background="#FFFFFFFF"
        android:clickable="true"/>

    <Button
        android:id="@+id/WeightLossAndHealthPlan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_weight_loss_health_plan"
        android:layout_row="21"
        android:layout_column="0"
        android:layout_gravity="left|center_horizontal"
        android:gravity="center_vertical|fill_vertical"
        android:paddingLeft="30dp"
        android:background="#FFFFFFFF"
        android:onClick="sendMessageWeightLossAndDietPlan"
        android:layout_weight="0.10" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_medicalReport"
        android:layout_row="24"
        android:layout_column="0"
        android:layout_gravity="left|center_horizontal"
        android:layout_weight="0.13"
        android:gravity="center_vertical|fill_vertical"
        android:paddingLeft="30dp"
        android:background="#FFFFFFFF"
        android:onClick="sendMessageMedReport"/>


</LinearLayout>